small style fix to align arrow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,11 +32,12 @@
 					&::after {
 						content: "\142F";
 						display: inline-block;
-						font-size: 14px;
 						font-weight: 700;
+						padding-top: 6px;
 						position: absolute;
 						right: 9px;
-						top: 6px;
+						top: 0;
+						transform: scale(0.75);
 					}
 				}
 
